--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mexico = countries\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
