Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,7 @@
     }
    ],
    "source": [
-    "countries.append('M')"
+    "countries.append('Malta')"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append"
    ]
   },
   {
