Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,8 @@
     }
    ],
    "source": [
-    "unique_countries = set(unique_countries)"
+    "unique_countries = set(unique_countries)\n",
+    "unique_co"
    ]
   },
   {
