Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
     }
    ],
    "source": [
-    "unique_countries\n",
+    "list(unique_countries\n",
     "unique_countries = set(unique_countries)\n"
    ]
   },
