Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,9 +398,7 @@
     }
    ],
    "source": [
-    "list(unique_countries)\n",
-    "\n",
-    "unique_countries = set(unique_countries)\n"
+    "set \n"
    ]
   },
   {
