Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,8 @@
     }
    ],
    "source": [
-    "set(unique_countries) =\n"
+    "set(unique_countries) = uniq ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n"
    ]
   },
   {
