--- a/index.ipynb
+++ b/index.ipynb
@@ -398,8 +398,7 @@
     }
    ],
    "source": [
-    "set(unique_countries) = uniq ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
-    "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n"
+    "set(unique_countries) = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n"
    ]
   },
   {
