--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,8 @@
     }
    ],
    "source": [
-    "set(unique_countries) = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n"
+    "set(unique_countries) = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n",
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
