Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -395,8 +395,8 @@
     }
    ],
    "source": [
-    "set(unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n",
-    "unique_countries = list(unique_countries)"
+    "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n",
+    "unique_countries = set(unique_countries)"
    ]
   },
   {
