Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,8 @@
    "outputs": [],
    "source": [
     "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n",
-    "unique_countries = set(unique_countries)\n"
+    "unique_countries = set(unique_countries)\n",
+    "li"
    ]
   },
   {
