Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,7 @@
    "source": [
     "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n",
     "unique_countries = set(unique_countries)\n",
-    "li"
+    "set(unique_countries) = list(u)"
    ]
   },
   {
