Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -382,22 +382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-22-f2e0f7ffdb3c>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-f2e0f7ffdb3c>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    set(unique_countries) = list(unique_countries)\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\n",
     "unique_countries = set(unique_countries)\n",
-    "unique_c= list(unique_countries)"
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
